# teste_vaga_dev_django

./: .envexemple  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apps/cadastro_de_tarefas/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/cadastro_de_tarefas/migrations/: 0001_initial.py  0002_alter_tarefasmodel_data_criacao.py  0003_remove_tarefasmodel_nome_usuario_and_more.py
apps/index/: tests.py  urls.py
apps/tempo_de_trabalho/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
apps/tempo_de_trabalho/forms/: cadastrar_tempo_forms.py  filtro_form.py
apps/tempo_de_trabalho/migrations/: 0001_initial.py  0002_tempodetrabalhomodel_tempo_trabalhado_horas_and_more.py  0003_remove_tempodetrabalhomodel_tempo_trabalhado_horas_and_more.py  0004_alter_tempodetrabalhomodel_tempo_trabalhado.py  0005_alter_tempodetrabalhomodel_tempo_trabalhado.py  0006_alter_tempodetrabalhomodel_tempo_trabalhado.py
desafio_dev_django/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  lista_de_tarefas.html
templates/cadastro_de_tarefas/: cadastrar_tarefa.html  lista_de_tarefas.html
templates/partials/: _alertas.html  _base.html
templates/tempo_de_trabalho/: cadastrar_tempo_de_trabalho.html  filtrar_tempo.html  lista_tempo_trabalhado.html  lista_tempo_trabalhado_filtrada.html
