[tool.poetry]
name = "desafio-dev-django"
version = "0.1.0"
description = "Teste Prático - Vaga de Desenvolvedor Python/Django"
authors = ["paulovitorgm <paulovitorgaspmelo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
ruff = "^0.6.9"
python-dotenv = "^1.0.1"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
taskipy = "^1.13.0"

[tool.poetry.group.dev]
optional = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 85
extend-exclude = ['migrations', 'manage.py', 'settings.py']
ignore = ['PT009']


[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'python manage.py runserver'
m = 'python manage.py'
pre_test = 'task lint'
test = 'python manage.py test'